tests/fixtures/invalid/set_pow_float.py
# Cannot power Set[int] and Float
x: float = {1, 2, 3} ** 1.0
